[package]
name = "ws"
version = "0.1.0"
authors = ["Jason Housley <HousleyJK@gmail.com>"]

description = "Lightweight, event-driven WebSockets for Rust."
repository = "https://github.com/housleyjk/ws-rs"
readme = "README.md"
keywords = ["websocket", "mio", "event-driven", "io", "web"]
license = "MIT"

[dependencies]
mio = "*"
log = "*"
httparse = "*"
sha1 = "*"
rand = "*"
url = "*"
openssl = "*"

[dev-dependencies]
env_logger = "*"
clock_ticks = "*"
